--- a/main.html
+++ b/main.html
@@ -10,7 +10,48 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<form method="post">
+	<div>
+	<label for="name" id="#name">Name</label>
+	<input type="text" required>
+		</div>
+	<div>
+	<label for=email id="#email">Email</label>
+	<input type="email" required>
+	</div>
+	<div>
+	<label for="Gender" id="#gender" name="gender">Gender</label>
+	<input type="radio" name="gender" required>
+	<label for="male" >Male</label>
+	<input type="radio" name="gender">
+	<label for="female">Female</label>
+</div>
+	<div>
+	<label for="laptop" id="#laptop">Laptop Brands</label>
+	<select name="laptop" >
+		<option value="apple">Apple</option>
+		<option value="asus">Asus</option>
+		<option value="hp">HP</option>
+	</select>
+	</div>
+	<div>
+	<label for="age" id="#age">Age</label>
+	<input type="number" required>
+	</div>
+	<div>
+	<label for="dob" id="#dob">DOB</label>
+	<input type="date" required>
+	</div>
+	<div></div>
+	<label for="password" id="#password">Password</label>
+	<input type="password" required>
+	</div>
+	<div>
+	<input type="url">
+	</div>
+	<button type="submit">submit</button>
+</form>
+	
 </body>
 
 </html>
