--- a/main.html
+++ b/main.html
@@ -20,10 +20,10 @@
 	<input type="email" required>
 	</div>
 	<div>
-	<label for="Gender" id="#gender" name="gender">Gender</label>
+	<label for="Gender"  name="gender">Gender</label> 
 	<input type="radio" name="gender" required>
 	<label for="male" >Male</label>
-	<input type="radio" name="gender">
+	<input type="radio" name="gender" required>
 	<label for="female">Female</label>
 </div>
 	<div>
