--- a/main.html
+++ b/main.html
@@ -47,7 +47,7 @@
 	<input type="password" required>
 	</div>
 	<div>
-		<label for="portfolio">Portfolio</label>
+		<label for="portfolio" id="portfolio">Portfolio</label>
 	<input type="url">
 	</div>
 	<button type="submit">submit</button>
